# bevy_slugtext

./: CREDITS.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: component.rs  lib.rs  slug.rs  systems.rs
src/shaders/: SlugPixel.wgsl  SlugVertex.wgsl
