[package]
name = "bevy_slugtext"
version = "0.1.0"
edition = "2024"
authors = ["yuanyan3060 <1846865993@qq.com>"]
description = "A high-performance GPU vector text rendering plugin for Bevy."
license = "MIT"
readme = "README.md"
repository = "https://github.com/yuanyan3060/bevy_slugtext"
keywords = ["bevy", "render", "text", "3d", "slug"]
categories = ["game-engines", "rendering"]
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_text",
    "bevy_pbr",
    "bevy_render",
] }
ttf-parser = "0.25.1"

[dev-dependencies]
bevy = { version = "0.18.1" }
